little fix on mobile version (#8)
* fix nas cores e no container.posts

* fds

* trying to fix

* funciona porfavor ;(((

* fix dos bugs encontrados

* vamos funcionar por favor git hub :(

* tou farto de caixinhas, hopefuly last update

* serão as últimas mudanças?

* fds

---------

--- a/common/common.scss
+++ b/common/common.scss
@@ -2007,11 +2007,52 @@ html.desktop-view.not-mobile-device {
 
 html.mobile-view.mobile-device {
 
+  #main-outlet-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .user-main .about .primary .primary-textual {
+    word-break: break-word;
+    max-width: 100%;
+    align-content: center;
+  }
+
+  .user-main .about .details .user-profile-avatar {
+    position: relative;
+    align-content: flex-start;
+  }
+
+  .user-main .about .details .primary {
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .user-main .about.collapsed-info .details {
+    height: 70px;
+  }
+
+  html {
+    overflow-x: hidden;
+  }
+
+  .post-avatar, .topic-avatar {
+    position: absolute;
+  }
+
+  .onscreen-post, .row {
+    justify-content: center;
+    width: 100%;
+  }
+
+=======
   .onscreen-post .row {
     display: flex;
     justify-content: center;
     width: 100%;
   }
+  
   .topic-avatar img.avatar {
     margin: 0;
   }
